--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-color: #C51563;
             border-radius: 10px;
             height: 100%;
-            width: 20%; /* Ajuste conforme o progresso */
+            width: 0%; /* Começando a barra de progresso com 0% */
         }
         .question {
             font-size: 27.2px;
@@ -61,7 +61,7 @@
             width: 100%;
             height: 200px;
             background-color: #ddd;
-            margin: 20px 0;
+            margin: 10px 0; /* Ajustado para reduzir o espaço */
         }
     </style>
 </head>
@@ -76,7 +76,8 @@
         <div class="question">Você está pronta para descobrir o segredo das unhas perfeitas?</div>
         <div class="question-secondary">Descubra agora o segredo por trás das unhas de fibra que estão transformando vidas e carreiras...</div>
 
-<img src="imagem/IMAGEM-1.jpg" alt="Imagem 1" style="width: 100%; height: auto; margin: 5px 0;">
+        <!-- Imagem -->
+        <img src="imagem/IMAGEM-1.jpg" alt="Imagem 1" style="width: 100%; height: auto; margin: 0;">
 
         <!-- Segunda parte do texto -->
         <div class="question-secondary">Agora, vamos entender um pouco mais sobre seu negócio e como ele pode crescer com as unhas perfeitas.</div>
