--- a/index.html
+++ b/index.html
@@ -85,5 +85,75 @@
         <!-- Botão Continuar -->
         <button class="btn">Continuar</button>
     </div>
+    <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz - Segunda Parte</title>
+    <style>
+        body {
+            font-family: 'GeistSans', sans-serif;
+            background-color: #f7f7f7;
+            padding: 0;
+            margin: 0;
+        }
+        .container {
+            width: 100%;
+            max-width: 375px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .progress-bar {
+            background-color: #ddd;
+            border-radius: 10px;
+            height: 10px;
+            width: 100%;
+            margin-bottom: 20px;
+            position: relative;
+        }
+        .progress-bar-inner {
+            background-color: #C51563;
+            border-radius: 10px;
+            height: 100%;
+            width: 60%; /* Ajuste conforme o progresso */
+        }
+        .image-placeholder {
+            width: 100%;
+            height: 200px;
+            background-color: #ddd;
+            margin: 20px 0;
+        }
+        .btn {
+            background-color: #C51563;
+            color: white;
+            font-size: 16px;
+            font-weight: bold;
+            padding: 15px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 20px;
+        }
+        .btn:hover {
+            background-color: #A1144F;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- Barra de progresso -->
+        <div class="progress-bar">
+            <div class="progress-bar-inner"></div>
+        </div>
+
+        <!-- Imagem da segunda parte -->
+        <img src="imagem/IMAGEM-2.jpg" alt="Imagem 2" style="width: 100%; height: auto; margin: 5px 0;"> <!-- Atualize o nome da imagem -->
+
+        <!-- Botão Continuar -->
+        <button class="btn">Continuar</button>
+    </div>
 </body>
 </html>
+
