TENTATIVA 3 PARA TROCAR DE PAGINA

--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
         <div class="question-secondary">Agora, vamos entender um pouco mais sobre seu negócio e como ele pode crescer com as unhas perfeitas.</div>
 
         <!-- Botão Continuar -->
-        <button class="btn">Continuar</button>
+<button class="btn" onclick="nextPage()">Continuar</button>
+
     </div>
-    <!DOCTYPE html>
-<html lang="pt-br">
-<head>
+</div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz - Segunda Parte</title>
