TESTE PARA MUDANÇA DE PAGINA #2

--- a/index.html
+++ b/index.html
@@ -82,11 +82,23 @@
         <!-- Segunda parte do texto -->
         <div class="question-secondary">Agora, vamos entender um pouco mais sobre seu negócio e como ele pode crescer com as unhas perfeitas.</div>
 
-        <!-- Botão Continuar -->
+       <!-- Botão Continuar -->
 <button class="btn" onclick="nextPage()">Continuar</button>
 
-    </div>
 </div>
+</div>
+
+<script>
+    function nextPage() {
+        // Muda a página ou avança para a próxima parte
+        window.location.href = 'segunda-parte.html';  // Substitua pelo caminho da próxima página
+    }
+</script>
+
+<!-- Código da segunda página -->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz - Segunda Parte</title>
@@ -155,4 +167,3 @@
     </div>
 </body>
 </html>
-
